--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
@@ -118,19 +118,10 @@ th.avatar {
   float: right;
 }
 
-.globalsearch input {
-  vertical-align: middle;
-}
-
-.globalsearchinput {
-  width: 168px; /* TODO: Adjust values */
-}
-
-.globalsearch input.button , .globalsearch input.button:hover{
-  background-color: $theme.pageContentBackgroundColor;
+.globalsearch input.button {
+  background-color: transparent;
   background-image: none;
   border: 0;
-  margin: 0 2px 0 -18px;
   padding: 0;
 }
 
