--- a/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
+++ b/xwiki-platform-core/xwiki-platform-junco/src/main/resources/junco/legacy.css
@@ -396,30 +396,12 @@ th.avatar {
   z-index: 999;
 }
 
-.actionmenu .submenu {
-  display: block;
-  padding: 5px 5px 5px 10px;
+.submenu {
   position: absolute;
-  width: auto;
-}
-
-.leftmenu {
-  left: 0;
-  padding-left: 25px;
-}
-
-.rightmenu {
-  right: 0;
-  padding-right: 10px;
 }
 
 .topmenuentry {
-  cursor: default;
-  display: block;
   float: left;
-  height: 1.6em;
-  margin-right: 5px;
-  min-height: 22px;
 }
 
 .rightmenu .topmenuentry {
@@ -431,93 +413,21 @@ th.avatar {
 }
 
 .actionmenu .hasIcon {
-  background: no-repeat 0px 3px;
-  padding: 0;
-}
-
-.tme-extensible {
-  display: block;
-}
-
-.tmetype {
-  float: left;
-  font: normal normal 700 0.8em/1.8em sans-serif;
-  padding: 2px 5px 0 20px;
-  text-transform: uppercase;
-}
-
-.topmenuentry .separator {
-  display: inline-block;
-  line-height: 1.8em;
-}
-
-/* ---------------------Links----------------------------*/
-.actionmenu a, .actionmenu a:visited {
-  display: block;
-  float: left;
-  font: normal normal 700 0.8em/1.8em sans-serif;
-  margin-right: -5px;
-  padding: 2px 10px 0 0;
-  width: auto;
-  white-space: nowrap;
-  text-transform: uppercase;
-}
-
-.actionmenu a:link, .actionmenu a:visited {
-  cursor: pointer;
-}
-
-.actionmenu .hasIcon a.tme {
-  padding-left: 20px;
-}
-
-.actionmenu .hasIcon a.hastype, .actionmenu a.hastype {
-  padding-left: 0;
-  text-transform: none;
-}
-
-.actionmenu a.hastype strong {
-  font-weight: 400;
-}
-
-.actionmenu a strong {
-  line-height: 1.8em;
+  background: no-repeat 0 50%;
 }
 
 .dropdownnolink a.tme:hover {
   text-decoration: none;
 }
 
-#actionmenu .rightmenu .submenuitem a {
-  text-align: right;
-  width: auto;
-}
-
 .submenuitem a {
   background: no-repeat 0;
-  height: 16px;
-  line-height: 20px;
-  margin-bottom: 4px;
-}
-
-.actionmenu .submenuitem a {
-  float: none;
-  font-weight: normal;
-  height: auto;
-  line-height: 1.2em;
-  min-height: 14px; /* Make sure the menu icons fit */
-  padding: 2px 20px 0;
-  text-align: left;
-  text-transform: none;
+  display: block;
+  padding-left: 20px;
 }
 
 .actionmenu .tmCreate {
   margin-right: 2em;
-  position: relative;
-}
-
-.tmCreate .submenu {
-  margin-left: -15px;
 }
 
 /* ----------------------Icons---------------------------*/
@@ -667,7 +577,7 @@ th.avatar {
 
 /* Styles for the floating menu, when scrolling down the page. */
 .floating-menu {
-  margin-top: -18px;
+  margin-top: -26px;
 }
 .floating-menu:hover {
   margin-top: 0;
