XWIKI-1342: Removing htmlfooter.vm and restoring htmlheader.vm divs
- Centering containers can be done like this https://github.com/evalica/bootswatch/commit/9b8fbf6e6b049c782108bed40bb748f73f35b5f9

--- a/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/htmlheader.vm
@@ -108,4 +108,5 @@
 #end
 ## These elements will be closed in the htmlfooter.vm file
 <$bodyTagName id="body" class="wiki-${xcontext.database} space-${escapetool.xml($doc.space.replaceAll(' ', '_'))} ${bodyAction}body #if($showLeftPanels == "0")hideleft#end#if($showRightPanels == "0")hideright#end#if($hidecolumns && ($!hidecolumns == 1))hidelefthideright#end">
-<div id="xwikimaincontainer" class="container">
+<div id="xwikimaincontainer">
+<div id="xwikimaincontainerinner">
