--- a/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/legacy.css
+++ b/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/legacy.css
@@ -252,10 +252,6 @@ th.avatar {
   display: none;
 }
 
-#footerglobal {
-  text-align: center;
-}
-
 /* @group EDIT LAYOUT  */
 /* --------------------------------------------------------------
   *  Layout elements for Junco skin in edit mode
@@ -629,8 +625,8 @@ th.avatar {
 }
 
 .xform label input[type=checkbox], .xform label input[type=radio] {
-  margin: 0 0.2em 0 0;
-  vertical-align: text-bottom;
+  margin-right: 0.2em;
+  vertical-align: baseline;
 }
 
 .xform dt label {
