XWIKI-1342: Cleaning junco.css
- Moving styles to xwiki-common.less
- Added back the #body ColorThemes background image style

--- a/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/legacy.css
+++ b/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/legacy.css
@@ -105,6 +105,10 @@ th.avatar {
   * Layout elements for Colibri skin in view mode
 -------------------------------------------------------------- */
 
+#body { /* Responsability given in legacy to #xwikimaincontainerinner */
+  background: $theme.pageBackgroundColor $!{theme.pageBackgroundImage} $!{theme.pageBackgroundPosition};
+}
+
 /* ----------------------Header--------------------------*/
 #headerglobal {
   background: $theme.pageHeaderBackgroundColor $!{theme.headerBackgroundImage} $!{theme.headerBackgroundPosition};
