XWIKI-1342: Removing junco.css + adding a Default Theme
- cleaning style.css

--- a/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/legacy.css
+++ b/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/legacy.css
@@ -106,7 +106,8 @@ th.avatar {
 -------------------------------------------------------------- */
 
 #body { /* Responsability given in legacy to #xwikimaincontainerinner */
-  background: $theme.pageBackgroundColor $!{theme.pageBackgroundImage} $!{theme.pageBackgroundPosition};
+  background-image: $!{theme.pageBackgroundImage};
+  background-repeat: $!{theme.pageBackgroundPosition};
 }
 
 /* ----------------------Header--------------------------*/
