--- a/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-junco/xwiki-platform-junco-base/src/main/resources/junco/htmlheader.vm
@@ -34,6 +34,12 @@
     #end
     <title>$title</title>
     ## ---------------------------------------------------------------------------------------------------------------
+    ## Force Compatibility mode for IE browsers to use the latest rendering mode. In order to work, the declaration 
+    ## needs to be placed in the <head>, before all other elements except for the <title> and other <meta> elements
+    ## See http://msdn.microsoft.com/en-us/library/jj676915(v=vs.85).aspx#SETMODE
+    ## ---------------------------------------------------------------------------------------------------------------
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    ## ---------------------------------------------------------------------------------------------------------------
     ## Favicons
     ## Legacy, for IE
     <link rel="shortcut icon" href="$xwiki.getSkinFile('icons/xwiki/favicon.ico')" />
@@ -53,10 +59,6 @@
     ## it's possible to imagine that the user might want it?  
     ## ---------------------------------------------------------------------------------------------------------------
     <meta http-equiv="imagetoolbar" content="no"/>
-    ## ---------------------------------------------------------------------------------------------------------------
-    ## Force Compatibility mode for IE browsers to use the latest rendering mode
-    ## ---------------------------------------------------------------------------------------------------------------
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     ## ---------------------------------------------------------------------------------------------------------------
     ## Universal edit button. See http://universaleditbutton.org
     ## ---------------------------------------------------------------------------------------------------------------
